tests/paczka1/fuzzy1/94689031.err
Error in line 9: oAf8BCIt A940 34,9
Error in line 11: dqVpX A940 87,4
Error in line 18: oAf8BCIt A828 1r1,3
Error in line 22: gLgU2NM A828 37,0
Error in line 12: oAf8BCIt A828 67,7
